--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ NEXTAUTH_SECRET="3BRAQWnfbEfhT3fnlrVMEHe2T7TG9ky4sfs//Xx+8Vc="
 
 GITHUB_ID="Your GitHub ID"
 GITHUB_SECRET="Your GitHub Secret"
+
+AUTH_CLIENT_ID=losapp
+AUTH_CLIENT_SECRET=
+AUTH_ISSUER=http://uat-apigw.h68los.local:8180/realms/H68
